--- a/media.css
+++ b/media.css
@@ -1,84 +1,313 @@
 body{
-    width: 100%;
-    height: 100%;
-    background-color: #E5E5E5;
-    font-family:'Lucida Sans',  sans-serif; 
-  } 
+  width: 100%;
+  height: 100%;
+  background-color: #E5E5E5;
+  font-family:'Lucida Sans',  sans-serif; 
+} 
 @media screen and (max-width: 1200px) {
-    nav{
-        display:inline-block;
-        position: absolute;
-        width: 100%;
-        height: 89px;
-        left: 0px;
-        top: 0px;
+  nav{
+      display:inline-block;
+      position: absolute;
+      width: 100%;
+      height: 89px;
+      left: 0px;
+      top: 0px;
+  }
+  .pic{
+      width:60px;
+      height:30px;
+      float:left;
+      margin-top:15px;
+      margin-left:15px
+  }
+  .block1{
+      position: absolute;
+      display: inline-block;
+      width:100%;
+      height: 69px;
+      background-color: #5e5a5a;
+  }
+  a{
+      text-decoration-line: none;
+      color: black;
+  }
+  input[type="search"]{
+      width: 300px;
+      height: 35px;
+      border: none;
+      border-radius: 50px;
+      margin-top: 2%;
+      margin-left: 1%;
+      transition: .3s linear;
+  }
+  input:focus {
+      width: 300px;
+      border: none;
+  }
+  .block2{
+      float: right;
+      margin-top: 10px;
+  }
+  input[type="button"]{
+      position: relative;
+      max-width: 60px;
+      height: 30px;
+      border: none;
+      border-radius: 50px;
+      background-color: chartreuse;
+      font-family:"Century Gothic", Helvetica;
+  }
+  .h2{
+    position: absolute;
+    width: 10.4%;
+    max-width: 125px;
+    height: 3.6%;
+    max-height: 44px;
+    left: 21.67%;
+    top: 127px;
+    color: #000000;
+}
+.block4 {
+    margin-top: 16px;
+    position: relative;
+    width: 56.7%;
+    max-width: 681px;
+    left: 21.6%;
+    right: 21.58%;
+    top: 176px;
+    background: #FFFFFF;
+    border: 1px solid #E7E7E7;
+    box-sizing: border-box;
+    border-radius: 8px;
+    overflow: hidden;
     }
-    .pic{
-        width:60px;
-        height:30px;
-        float:left;
-        margin-top:15px;
-        margin-left:15px
-    }
-    .block1{
-        position: absolute;
-        display: inline-block;
-        width:100%;
-        min-width: none;
-        height: 69px;
-        background-color: #5e5a5a;
-    }
-    a{
-        text-decoration-line: none;
-        color: black;
-    }
-    input[type="search"]{
-        width: 300px;
-        height: 35px;
-        border: none;
-        border-radius: 50px;
-        margin-top: 2%;
-        margin-left: 1%;
-        transition: .3s linear;
-    }
-    input:focus {
-        width: 300px;
-        border: none;
-    }
-    .block2{
-        float: right;
-        margin-top: 10px;
-    }
-    input[type="button"]{
-        position: relative;
-        max-width: 60px;
-        height: 30px;
-        border: none;
-        border-radius: 50px;
-        background-color: chartreuse;
-        font-family:"Century Gothic", Helvetica;
-    }
-    ul{
-        position: absolute;
-        margin-top: 69px;
-        border: black solid 1px;
-    }   
-    li {
-        list-style: none;
-         margin-left: 15px;
-         margin-right: 16px;
-       }
-    li {float: left; } 
-    }
-    @media screen and (max-width: 650px) {
-        html {
-            -webkit-text-size-adjust: none;
-            }
-            nav a {
+  .block4 input {
+    position: absolute;
+    opacity: 0;
+    z-index: -1;
+  }
+  .block4 label {
+    position: absolute;
+    cursor: pointer;
+    top: 60%;
+    left: 90%;
+  }
+  .p3 {
+    max-height: 0;
+    margin-top: 10px;
+    overflow: hidden;
+    background: #FFFFFF;
+    border: 1px solid #E7E7E7;
+    font-size: 12px;
+    transition: max-height .35s;
+    display: flex;
+  }
+  .block4 input:checked ~ .p3 {
+    max-height: 638px;
+  }
+  .block4 label::after {
+    transition: all .35s;
+    position: absolute;
+    top:80%;
+  }
+  .block4 input[type=checkbox] + label::after {
+    content: url(button.jpg);
+  }
+ 
+  .block4 input[type=radio]:checked + label::after {
+    transform: rotateX(180deg);
+  }
+  .pic1{
+    margin-top: -40px;
+    border-radius: 100%;
+    width: 75px;
+    height: 70px;
+    margin-left: 5px;
+}
+.h22{
+    margin-left: 85px;
+}
+.text1{
+  float: right;
+  margin-top: -65px;
+  width: 100px;
+  height: 30px;
+  border-radius: 40px 0px 0px 40px;
+}
+.text11{
+  background-color: rgb(245, 240, 240);
+}
+.text12{
+  background-color: rgb(155, 218, 160);
+  color: rgb(15, 107, 20);
+}
+.p2{
+  margin-top: 5px;
+  margin-left: 5px;
+}
+.p1{
+  margin-top: -40px;
+  margin-left: 85px;
+}
+a.knopka{
+  text-decoration: none;
+  margin-left: 80px;
+  border: none;
+  border-radius: 50px;
+  background-color: rgb(135, 135, 221);
+}
+a.knopka:hover { background: rgb(170, 183, 240); } 
+a.knopka:active { background: rgb(141, 119, 219); }
+  ul{
+      position: absolute;
+      margin-top: 49px;
+      border: black solid 1px;
+  }   
+  li {
+      list-style: none;
+       margin-left: 16px;
+       margin-right: 18px;
+     }
+  li {float: left; } 
+  .spisok{
+    position: relative;
+    width: 70%;
+}
+.spisok2{
+  position: relative;
+  width: 10%;
+  min-width: 100px;
+}
+  }
+  @media screen and (max-width: 650px) {
+      body {
+          font-size: 85%;
+          }
+          .block1{
+            position: absolute;
+            display: inline-block;
+            width:100%;
+            height: 69px;
+            background-color: #5e5a5a;
+        }
+      input[type="search"]{
+          width: 200px;
+          height: 35px;
+          border-radius: 0%;
+          border: none;
+          margin-top: 3%;
+          margin-left: 15%;
+          transition: .3s linear;
+      }
+      .pic,.block2{
+          display: none;
+      }
+      .menu-btn{
+          display: flex;
+          align-items: center;
+          position: absolute;
+          margin-top: 1%;
+          margin-left:3%;
+          width: 26px;
+          height: 26px;
+          cursor: pointer;
+          z-index: 1;
+        }
+        .menu-btn > span,
+        .menu-btn > span::before,
+        .menu-btn > span::after {
+          display: block;
+          position: absolute;
+          width: 100%;
+          height: 2px;
+          background-color: #eee4e4;
+          transition-duration: .25s;
+        }
+        .menu-btn > span::before {
+          content: '';
+          top: -8px;
+        }
+        .menu-btn > span::after {
+          content: '';
+          top: 8px;
+        }
+         .menubox{
+          display: block;
+          position: fixed;
+          visibility: hidden;
+          background-color: #FFFFFF;
+          top: 69px;
+          left: -100%;
+          width: 200px;
+          margin: 0;
+          padding: 0 0;
+          list-style: none;
+          box-shadow: 1px 0px 6px rgba(0, 0, 0, .2);
+          transition-duration: .25s;
+        }
+         
+        .menu-item {
+          display: block;
+          padding: 12px 24px;
+          color: #333;
+          font-weight: 600;
+          text-decoration: none;
+          transition-duration: .25s;
+        }
+        .menu-item:hover {
+          background-color: #CFD8DC;
+        }
+         #menu-toggle{
+          opacity: 0;
+        }
+        #menu-toggle:checked ~ .menu-btn > span{
+          transform: rotate(45deg);
+        }
+        #menu-toggle:checked ~ .menu-btn > span::before{
+          top: 0;
+          transform: rotate(0);
+        }
+        #menu-toggle:checked ~ .menu-btn > span::after{
+          top: 0;
+          transform: rotate(90deg);
+        }
+        #menu-toggle:checked ~ .menubox{
+          visibility: visible;
+          left: 0;
+        }
+        .block4 {
+          width: 100%;
+          left: -2%;
+          border-radius: 0;
+          }
+        .h2{
+        left: 0;
+        }
+        .block4, .h2{
+          z-index: -1;
+        }
+        .h2,h2,h3,p{
             font-size: 90%;
-            padding: 10px 8px;
-            }
-        input[type="search"]{
+          }
+          .text1{
+            border-radius: 5px;
+            width: 80px;
+            height: 30px;
+            margin-left: 280px;
+            margin-top: -65px;
+          }
+          .pic1{
+            margin-top: -30px;
+          }
+          .block4 input:checked ~ .p3 {
+            max-height: none;
+          }
+      }
+      @media screen and (max-width: 480px) {
+          body {
+          font-size: 80%;
+          }
+          input[type="search"]{
             width: 200px;
             height: 35px;
             border-radius: 0%;
@@ -87,94 +316,4 @@ body{
             margin-left: 15%;
             transition: .3s linear;
         }
-        .pic,.block2{
-            display: none;
-        }
-        .menu-btn{
-            display: flex;
-            align-items: center;
-            position: absolute;
-            margin-top: 1%;
-            margin-left:3%;
-            width: 26px;
-            height: 26px;
-            cursor: pointer;
-            z-index: 1;
           }
-           
-          .menu-btn > span,
-          .menu-btn > span::before,
-          .menu-btn > span::after {
-            display: block;
-            position: absolute;
-            width: 100%;
-            height: 2px;
-            background-color: #eee4e4;
-            transition-duration: .25s;
-          }
-          .menu-btn > span::before {
-            content: '';
-            top: -8px;
-          }
-          .menu-btn > span::after {
-            content: '';
-            top: 8px;
-          }
-           .menubox{
-            display: block;
-            position: fixed;
-            visibility: hidden;
-            top: 0;
-            left: -100%;
-            width: 300px;
-            height: 100%;
-            margin: 0;
-            padding: 80px 0;
-            list-style: none;
-            background-color: #ECEFF1;
-            box-shadow: 1px 0px 6px rgba(0, 0, 0, .2);
-            transition-duration: .25s;
-          }
-           
-          .menu-item {
-            display: block;
-            padding: 12px 24px;
-            color: #333;
-            font-family: 'Roboto', sans-serif;
-            font-size: 20px;
-            font-weight: 600;
-            text-decoration: none;
-            transition-duration: .25s;
-          }
-          .menu-item:hover {
-            background-color: #CFD8DC;
-          }
-           
-           
-          #menu-toggle{
-            opacity: 0;
-          }
-           
-          #menu-toggle:checked ~ .menu-btn > span{
-            transform: rotate(45deg);
-          }
-          #menu-toggle:checked ~ .menu-btn > span::before{
-            top: 0;
-            transform: rotate(0);
-          }
-          #menu-toggle:checked ~ .menu-btn > span::after{
-            top: 0;
-            transform: rotate(90deg);
-          }
-          #menu-toggle:checked ~ .menubox{
-            visibility: visible;
-            left: 0;
-          }
-        }
-        @media screen and (max-width: 480px) {
-            nav .section{
-            font-size: 80%;
-            padding-top: 10px;
-            }
-          
-            }
